ASHE Table 7.ipynb

--- a/ASHE Table 7.ipynb
+++ b/ASHE Table 7.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "# ASHE Table 7\n",
     "\n",
@@ -37,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,8 +55,501 @@
    ],
    "source": [
     "from databaker.framework import *\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "tabs = loadxlstabs(\"./sources/PROV - Work Geography Table 7.1a   Weekly pay - Gross 2018.xls\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabs1 = ['All', 'Male', 'Female', 'Full-Time', 'Part-Time', \\\n",
+    "         'Male Full-Time', 'Male Part-Time',\\\n",
+    "         'Female Full-Time', 'Female Part-Time']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading ./sources/PROV - Work Geography Table 7.1a   Weekly pay - Gross 2018.xls which has size 846336 bytes\n",
+      "Table names: ['All', 'Male', 'Female', 'Full-Time', 'Part-Time', 'Male Full-Time', 'Male Part-Time', 'Female Full-Time', 'Female Part-Time']\n"
+     ]
+    }
+   ],
+   "source": [
+    "tabs = loadxlstabs(\"./sources/PROV - Work Geography Table 7.1a   Weekly pay - Gross 2018.xls\", tabs1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tidied_sheets = []\n",
+    "for tab in tabs:\n",
+    "    \n",
+    "    bottom_block = tab.excel_ref(\"A438\").expand(DOWN).expand(RIGHT).is_not_blank()\n",
+    "    right_block = tab.excel_ref(\"S6\").expand(DOWN).expand(RIGHT).is_not_blank()\n",
+    "    observations = tab.excel_ref(\"H6\").expand(DOWN).expand(RIGHT).is_not_blank() \\\n",
+    "    - bottom_block - right_block\n",
+    "    \n",
+    "    geography = tab.excel_ref(\"B6\").expand(DOWN).is_not_blank() - bottom_block\n",
+    "    percentile = tab.excel_ref(\"H5\").expand(RIGHT).is_not_blank()\n",
+    "    time = \"2018\" # tab.excel_ref(\"A1\") \n",
+    "    \n",
+    "    if \"Male\" in tab.name:\n",
+    "        gender = \"Male\"\n",
+    "    elif \"Female\" in tab.name:\n",
+    "        gender = \"Female\"\n",
+    "    else:\n",
+    "        gender = \"All\"\n",
+    "    \n",
+    "    if \"Full-Time\" in tab.name:\n",
+    "        work_pattern = \"Full time\"\n",
+    "    elif \"Part-Time\" in tab.name:\n",
+    "        work_pattern = \"Part time\"\n",
+    "    else:\n",
+    "        work_pattern = \"All\"\n",
+    "    \n",
+    "    statistics =  \"weekly pay\" # tab.excel_ref(\"A1\")\n",
+    "    \n",
+    "    dimensions = [ \n",
+    "        HDimConst(\"Time\", time),\n",
+    "        HDimConst(\"Statistics\", statistics),\n",
+    "        HDimConst(\"Gender\", gender),\n",
+    "        HDimConst(\"Working Pattern\", work_pattern),\n",
+    "        HDim(geography, 'Geography', CLOSEST, UP),\n",
+    "        HDim(percentile, \"Percentile\", DIRECTLY, ABOVE)\n",
+    "    ]\n",
+    "    \n",
+    "    cs = ConversionSegment(tab, dimensions, observations) # < --- processing\n",
+    "    tidy_sheet = cs.topandas() #dataframe\n",
+    "    tidied_sheets.append(tidy_sheet) # <-- adding result of processing this tab to our list\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datacube = pd.concat(tidied_sheets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBS</th>\n",
+       "      <th>DATAMARKER</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Statistics</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Working Pattern</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Percentile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>145.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>241.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>290.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>325.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>389.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4295</th>\n",
+       "      <td>220.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4296</th>\n",
+       "      <td>249.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4297</th>\n",
+       "      <td>270</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4298</th>\n",
+       "      <td>294.7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4299</th>\n",
+       "      <td>390.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>38730 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        OBS DATAMARKER  Time  Statistics  Gender Working Pattern  Geography  \\\n",
+       "0     145.2        NaN  2018  weekly pay     All             All  K02000001   \n",
+       "1     241.1        NaN  2018  weekly pay     All             All  K02000001   \n",
+       "2     290.2        NaN  2018  weekly pay     All             All  K02000001   \n",
+       "3     325.3        NaN  2018  weekly pay     All             All  K02000001   \n",
+       "4     389.5        NaN  2018  weekly pay     All             All  K02000001   \n",
+       "...     ...        ...   ...         ...     ...             ...        ...   \n",
+       "4295  220.5        NaN  2018  weekly pay  Female       Part time  N92000002   \n",
+       "4296  249.9        NaN  2018  weekly pay  Female       Part time  N92000002   \n",
+       "4297    270        NaN  2018  weekly pay  Female       Part time  N92000002   \n",
+       "4298  294.7        NaN  2018  weekly pay  Female       Part time  N92000002   \n",
+       "4299  390.6        NaN  2018  weekly pay  Female       Part time  N92000002   \n",
+       "\n",
+       "     Percentile  \n",
+       "0          10.0  \n",
+       "1          20.0  \n",
+       "2          25.0  \n",
+       "3          30.0  \n",
+       "4          40.0  \n",
+       "...         ...  \n",
+       "4295       60.0  \n",
+       "4296       70.0  \n",
+       "4297       75.0  \n",
+       "4298       80.0  \n",
+       "4299       90.0  \n",
+       "\n",
+       "[38730 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datacube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datacube.drop(columns=\"DATAMARKER\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBS</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Statistics</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Working Pattern</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Percentile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>145.2</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>241.1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>290.2</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>325.3</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>389.5</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>All</td>\n",
+       "      <td>All</td>\n",
+       "      <td>K02000001</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4295</th>\n",
+       "      <td>220.5</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4296</th>\n",
+       "      <td>249.9</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4297</th>\n",
+       "      <td>270</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4298</th>\n",
+       "      <td>294.7</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4299</th>\n",
+       "      <td>390.6</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>weekly pay</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Part time</td>\n",
+       "      <td>N92000002</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>38730 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        OBS  Time  Statistics  Gender Working Pattern  Geography Percentile\n",
+       "0     145.2  2018  weekly pay     All             All  K02000001       10.0\n",
+       "1     241.1  2018  weekly pay     All             All  K02000001       20.0\n",
+       "2     290.2  2018  weekly pay     All             All  K02000001       25.0\n",
+       "3     325.3  2018  weekly pay     All             All  K02000001       30.0\n",
+       "4     389.5  2018  weekly pay     All             All  K02000001       40.0\n",
+       "...     ...   ...         ...     ...             ...        ...        ...\n",
+       "4295  220.5  2018  weekly pay  Female       Part time  N92000002       60.0\n",
+       "4296  249.9  2018  weekly pay  Female       Part time  N92000002       70.0\n",
+       "4297    270  2018  weekly pay  Female       Part time  N92000002       75.0\n",
+       "4298  294.7  2018  weekly pay  Female       Part time  N92000002       80.0\n",
+       "4299  390.6  2018  weekly pay  Female       Part time  N92000002       90.0\n",
+       "\n",
+       "[38730 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datacube"
    ]
   }
  ],
@@ -72,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
