Answers to mock trasnsformations
Answers to mock transformations

--- a/Population Estimates.ipynb
+++ b/Population Estimates.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,9 +50,335 @@
    ],
    "source": [
     "from databaker.framework import *\n",
+    "import pandas as pd\n",
     "\n",
     "# the Seasonally Adjusted Tabs\n",
-    "tidy_sheet = loadxlstabs(\"./sources/pop.xls\")"
+    "tabs = loadxlstabs(\"./sources/pop.xls\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tab = tabs[0]\n",
+    "country = tab.excel_ref('B1').expand(RIGHT).is_not_blank()\n",
+    "year = tab.excel_ref('A8').expand(DOWN).is_not_blank()\n",
+    "cdid = tab.excel_ref(\"B2\").expand(RIGHT).is_not_blank()\n",
+    "observations = year.fill(RIGHT).is_not_blank()\n",
+    "\n",
+    "dimensions = [\n",
+    "    HDim(year, 'Year', DIRECTLY, LEFT),\n",
+    "    HDim(country, \"Geography\", DIRECTLY, ABOVE),\n",
+    "    HDim(cdid, \"CDID\", DIRECTLY, ABOVE)\n",
+    "    ]\n",
+    "cs= ConversionSegment(tab, dimensions, observations)\n",
+    "datacube = cs.topandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBS</th>\n",
+       "      <th>CDID</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Geography</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5235600.0</td>\n",
+       "      <td>SCPOP</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>Scotland population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>54387600.0</td>\n",
+       "      <td>GBPOP</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>Great Britain population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46411700.0</td>\n",
+       "      <td>ENPOP</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>England population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55928000.0</td>\n",
+       "      <td>UKPOP</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>United Kingdom population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49152000.0</td>\n",
+       "      <td>EWPOP</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>England and Wales population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>55977200.0</td>\n",
+       "      <td>ENPOP</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>England population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>66435600.0</td>\n",
+       "      <td>UKPOP</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>United Kingdom population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333</th>\n",
+       "      <td>59115800.0</td>\n",
+       "      <td>EWPOP</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>England and Wales population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>1881600.0</td>\n",
+       "      <td>NIPOP</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Northern Ireland population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>3138600.0</td>\n",
+       "      <td>WAPOP</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Wales population mid-year estimate</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>336 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            OBS   CDID  Year                                       Geography\n",
+       "0     5235600.0  SCPOP  1971           Scotland population mid-year estimate\n",
+       "1    54387600.0  GBPOP  1971      Great Britain population mid-year estimate\n",
+       "2    46411700.0  ENPOP  1971            England population mid-year estimate\n",
+       "3    55928000.0  UKPOP  1971     United Kingdom population mid-year estimate\n",
+       "4    49152000.0  EWPOP  1971  England and Wales population mid-year estimate\n",
+       "..          ...    ...   ...                                             ...\n",
+       "331  55977200.0  ENPOP  2018            England population mid-year estimate\n",
+       "332  66435600.0  UKPOP  2018     United Kingdom population mid-year estimate\n",
+       "333  59115800.0  EWPOP  2018  England and Wales population mid-year estimate\n",
+       "334   1881600.0  NIPOP  2018   Northern Ireland population mid-year estimate\n",
+       "335   3138600.0  WAPOP  2018              Wales population mid-year estimate\n",
+       "\n",
+       "[336 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datacube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datacube[\"Geography\"] = datacube[\"Geography\"].str\\\n",
+    ".replace(\"population mid-year estimate\", \" \")\n",
+    "\n",
+    "datacube[\"CDID\"] = datacube[\"CDID\"].str.rstrip(\"OP\")\n",
+    "\n",
+    "datacube[\"OBS\"] = datacube[\"OBS\"].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBS</th>\n",
+       "      <th>CDID</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Geography</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5235600</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>Scotland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>54387600</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>Great Britain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46411700</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55928000</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49152000</td>\n",
+       "      <td>EW</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>England and Wales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>55977200</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>66435600</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333</th>\n",
+       "      <td>59115800</td>\n",
+       "      <td>EW</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>England and Wales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>1881600</td>\n",
+       "      <td>NI</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Northern Ireland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>3138600</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Wales</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>336 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          OBS CDID  Year            Geography\n",
+       "0     5235600   SC  1971           Scotland  \n",
+       "1    54387600   GB  1971      Great Britain  \n",
+       "2    46411700   EN  1971            England  \n",
+       "3    55928000   UK  1971     United Kingdom  \n",
+       "4    49152000   EW  1971  England and Wales  \n",
+       "..        ...  ...   ...                  ...\n",
+       "331  55977200   EN  2018            England  \n",
+       "332  66435600   UK  2018     United Kingdom  \n",
+       "333  59115800   EW  2018  England and Wales  \n",
+       "334   1881600   NI  2018   Northern Ireland  \n",
+       "335   3138600   WA  2018              Wales  \n",
+       "\n",
+       "[336 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datacube"
    ]
   }
  ],
@@ -72,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
